@@ -1,45 +1,45 @@
-usr/lib/ipsec/libstrongswan.so*
-usr/lib/ipsec/libhydra.so*
-usr/lib/ipsec/libfast.so*
-usr/lib/ipsec/libchecksum.so*
-usr/lib/ipsec/libsimaka.so*
-usr/lib/ipsec/libtnccs.so*
-usr/lib/ipsec/libradius.so*
-usr/lib/ipsec/libtls.so*
-usr/lib/ipsec/plugins/libstrongswan-gmp.so*
-usr/lib/ipsec/plugins/libstrongswan-openssl.so*
-usr/lib/ipsec/plugins/libstrongswan-x509.so*
-usr/lib/ipsec/plugins/libstrongswan-pkcs11.so*
-usr/lib/ipsec/plugins/libstrongswan-pgp.so*
-usr/lib/ipsec/plugins/libstrongswan-pem.so*
-usr/lib/ipsec/plugins/libstrongswan-pkcs1.so*
-usr/lib/ipsec/plugins/libstrongswan-pubkey.so*
-usr/lib/ipsec/plugins/libstrongswan-hmac.so*
-usr/lib/ipsec/plugins/libstrongswan-xcbc.so*
-usr/lib/ipsec/plugins/libstrongswan-random.so*
-usr/lib/ipsec/plugins/libstrongswan-aes.so*
-usr/lib/ipsec/plugins/libstrongswan-des.so*
-usr/lib/ipsec/plugins/libstrongswan-xcbc.so*
-usr/lib/ipsec/plugins/libstrongswan-ctr.so*
-usr/lib/ipsec/plugins/libstrongswan-ccm.so*
-usr/lib/ipsec/plugins/libstrongswan-gcm.so*
-usr/lib/ipsec/plugins/libstrongswan-led.so*
-usr/lib/ipsec/plugins/libstrongswan-addrblock.so*
-usr/lib/ipsec/plugins/libstrongswan-md5.so*
-usr/lib/ipsec/plugins/libstrongswan-sha1.so*
-usr/lib/ipsec/plugins/libstrongswan-sha2.so*
-usr/lib/ipsec/plugins/libstrongswan-dhcp.so*
-usr/lib/ipsec/plugins/libstrongswan-dnskey.so*
-usr/lib/ipsec/plugins/libstrongswan-farp.so*
-usr/lib/ipsec/plugins/libstrongswan-fips-prf.so*
-usr/lib/ipsec/plugins/libstrongswan-resolve.so*
-usr/lib/ipsec/plugins/libstrongswan-sql.so*
-usr/lib/ipsec/plugins/libstrongswan-ha.so*
-usr/lib/ipsec/plugins/libstrongswan-xauth.so*
-usr/lib/ipsec/plugins/libstrongswan-revocation.so*
-usr/lib/ipsec/plugins/libstrongswan-constraints.so*
-usr/lib/ipsec/plugins/libstrongswan-test-vectors.so*
-usr/lib/ipsec/plugins/libstrongswan-tnc-tnccs.so
-usr/lib/ipsec/plugins/libstrongswan-pkcs8.so
-usr/lib/ipsec/plugins/libstrongswan-cmac.so
+usr/lib/*/ipsec/libstrongswan.so*
+usr/lib/*/ipsec/libhydra.so*
+usr/lib/*/ipsec/libfast.so*
+usr/lib/*/ipsec/libchecksum.so*
+usr/lib/*/ipsec/libsimaka.so*
+usr/lib/*/ipsec/libtnccs.so*
+usr/lib/*/ipsec/libradius.so*
+usr/lib/*/ipsec/libtls.so*
+usr/lib/*/ipsec/plugins/libstrongswan-gmp.so*
+usr/lib/*/ipsec/plugins/libstrongswan-openssl.so*
+usr/lib/*/ipsec/plugins/libstrongswan-x509.so*
+usr/lib/*/ipsec/plugins/libstrongswan-pkcs11.so*
+usr/lib/*/ipsec/plugins/libstrongswan-pgp.so*
+usr/lib/*/ipsec/plugins/libstrongswan-pem.so*
+usr/lib/*/ipsec/plugins/libstrongswan-pkcs1.so*
+usr/lib/*/ipsec/plugins/libstrongswan-pubkey.so*
+usr/lib/*/ipsec/plugins/libstrongswan-hmac.so*
+usr/lib/*/ipsec/plugins/libstrongswan-xcbc.so*
+usr/lib/*/ipsec/plugins/libstrongswan-random.so*
+usr/lib/*/ipsec/plugins/libstrongswan-aes.so*
+usr/lib/*/ipsec/plugins/libstrongswan-des.so*
+usr/lib/*/ipsec/plugins/libstrongswan-xcbc.so*
+usr/lib/*/ipsec/plugins/libstrongswan-ctr.so*
+usr/lib/*/ipsec/plugins/libstrongswan-ccm.so*
+usr/lib/*/ipsec/plugins/libstrongswan-gcm.so*
+usr/lib/*/ipsec/plugins/libstrongswan-led.so*
+usr/lib/*/ipsec/plugins/libstrongswan-addrblock.so*
+usr/lib/*/ipsec/plugins/libstrongswan-md5.so*
+usr/lib/*/ipsec/plugins/libstrongswan-sha1.so*
+usr/lib/*/ipsec/plugins/libstrongswan-sha2.so*
+usr/lib/*/ipsec/plugins/libstrongswan-dhcp.so*
+usr/lib/*/ipsec/plugins/libstrongswan-dnskey.so*
+usr/lib/*/ipsec/plugins/libstrongswan-farp.so*
+usr/lib/*/ipsec/plugins/libstrongswan-fips-prf.so*
+usr/lib/*/ipsec/plugins/libstrongswan-resolve.so*
+usr/lib/*/ipsec/plugins/libstrongswan-sql.so*
+usr/lib/*/ipsec/plugins/libstrongswan-ha.so*
+usr/lib/*/ipsec/plugins/libstrongswan-xauth.so*
+usr/lib/*/ipsec/plugins/libstrongswan-revocation.so*
+usr/lib/*/ipsec/plugins/libstrongswan-constraints.so*
+usr/lib/*/ipsec/plugins/libstrongswan-test-vectors.so*
+usr/lib/*/ipsec/plugins/libstrongswan-tnc-tnccs.so
+usr/lib/*/ipsec/plugins/libstrongswan-pkcs8.so
+usr/lib/*/ipsec/plugins/libstrongswan-cmac.so
 etc/strongswan.conf
