@@ -1,6 +1,6 @@
 #starter
-usr/lib/ipsec/starter
-usr/lib/ipsec/_copyright
+usr/lib/*/ipsec/starter
+usr/lib/*/ipsec/_copyright
 usr/sbin/ipsec
 etc/ipsec.d
 etc/ipsec.conf
@@ -9,18 +9,18 @@ usr/share/man/man5/ipsec.conf.5
 usr/share/man/man5/ipsec.secrets.5
 usr/share/man/man5/strongswan.conf.5
 #updown
-usr/lib/ipsec/plugins/libstrongswan-updown.so*
-usr/lib/ipsec/_updown
-usr/lib/ipsec/_updown_espmark
+usr/lib/*/ipsec/plugins/libstrongswan-updown.so*
+usr/lib/*/ipsec/_updown
+usr/lib/*/ipsec/_updown_espmark
 usr/share/man/man8/_updown.8
 usr/share/man/man8/_updown_espmark.8
 #tools
-usr/lib/ipsec/scepclient
-usr/lib/ipsec/openac
-usr/lib/ipsec/pki
-usr/lib/ipsec/pool
+usr/lib/*/ipsec/scepclient
+usr/lib/*/ipsec/openac
+usr/lib/*/ipsec/pki
+usr/lib/*/ipsec/pool
 usr/share/man/man8/scepclient.8
 usr/share/man/man8/openac.8
 #stroke
-usr/lib/ipsec/stroke
-usr/lib/ipsec/plugins/libstrongswan-stroke.so*
+usr/lib/*/ipsec/stroke
+usr/lib/*/ipsec/plugins/libstrongswan-stroke.so*
